# linux-libc-auxv

./: .editorconfig  .typos.toml  CHANGELOG.md  Cargo.toml  README.md  check-build.sh
.github/workflows/: dependabot-auto-merge.yml  qa.yml  rust.yml
examples/: build_and_parse.rs  linux_parse_print_layout.rs  linux_print_layout.rs  minimal.rs  minimal_builder.rs
src/: aux_vars.rs  builder.rs  cstr_util.rs  lib.rs  parser.rs  util.rs
src/aux_var/: mod.rs  serialized.rs  typ.rs
src/builder/: aux_var.rs  mod.rs  serializer.rs
