# Cargo.toml: <https://doc.rust-lang.org/cargo/reference/manifest.html>

[package]
name = "linux-libc-auxv"
description = """
A parser and builder for the Linux process initial stack layout - use it to
decode or construct argc, argv, envp, and auxv (auxiliary vector).
"""
version = "0.3.0"
edition = "2024"
rust-version = "1.85.0"
authors = [
    "Philipp Schuster <phip1611@gmail.com>"
]
keywords = ["libc", "auxv", "linux", "auxiliary-vector", "crt0"]
categories = ["os::linux-apis", "no-std"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/phip1611/linux-libc-auxv"
repository = "https://github.com/phip1611/linux-libc-auxv"
documentation = "https://docs.rs/linux-libc-auxv"
exclude = [
    ".github"
]

[features]
default = [ "alloc", "builder" ]
alloc = []
builder = ["alloc", "dep:aligned-vec"]

[dependencies]
aligned-vec = { version = "0.6.4", default-features = false, optional = true }
bitflags = "2.10.0"
thiserror = { version = "2.0.12", default-features = false }

